--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,41 @@
 		"xstring": "cpp",
 		"xtr1common": "cpp",
 		"xutility": "cpp",
-		"ostream": "cpp"
+		"ostream": "cpp",
+		"vector": "cpp",
+		"memory": "cpp",
+		"algorithm": "cpp",
+		"atomic": "cpp",
+		"clocale": "cpp",
+		"cmath": "cpp",
+		"cstdarg": "cpp",
+		"ctime": "cpp",
+		"fstream": "cpp",
+		"functional": "cpp",
+		"iomanip": "cpp",
+		"ios": "cpp",
+		"iostream": "cpp",
+		"istream": "cpp",
+		"iterator": "cpp",
+		"list": "cpp",
+		"locale": "cpp",
+		"map": "cpp",
+		"sstream": "cpp",
+		"stdexcept": "cpp",
+		"streambuf": "cpp",
+		"system_error": "cpp",
+		"typeinfo": "cpp",
+		"unordered_map": "cpp",
+		"xfacet": "cpp",
+		"xhash": "cpp",
+		"xiosbase": "cpp",
+		"xlocale": "cpp",
+		"xlocbuf": "cpp",
+		"xlocinfo": "cpp",
+		"xlocmes": "cpp",
+		"xlocmon": "cpp",
+		"xlocnum": "cpp",
+		"xloctime": "cpp",
+		"xtree": "cpp"
 	}
 }
