--- a/Aniamtor/Aniamtor.vcxproj.filters
+++ b/Aniamtor/Aniamtor.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="Light.hpp">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Controlable.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Bone.cpp">
@@ -102,6 +105,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Light.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Controlable.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
