둘 다 되는 것

--- a/Aniamtor/Aniamtor.vcxproj.filters
+++ b/Aniamtor/Aniamtor.vcxproj.filters
@@ -110,5 +110,8 @@
     <ClCompile Include="Controlable.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Main.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
