--- a/Aniamtor/Aniamtor.vcxproj
+++ b/Aniamtor/Aniamtor.vcxproj
@@ -167,6 +167,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Controlable.cpp" />
     <ClCompile Include="Light.cpp" />
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="Material.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Model.cpp" />
