#37 상태패턴 구현 완료

--- a/Aniamtor/Aniamtor.vcxproj
+++ b/Aniamtor/Aniamtor.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="Shader.hpp" />
     <ClInclude Include="Vertex.hpp" />
     <ClInclude Include="WindowGlfw.hpp" />
+    <ClInclude Include="World.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\glad.c" />
@@ -177,6 +178,7 @@
     <ClCompile Include="Tester.cpp" />
     <ClCompile Include="Vertex.cpp" />
     <ClCompile Include="WindowGlfw.cpp" />
+    <ClCompile Include="World.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
